fixed horizontal scroll bar from foundation

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -112,6 +112,11 @@
 // $topBarBreakPoint: 940px; // Change to 9999px for always mobile layout
 // $topBarNavToggleSize: 8px;
 
+.top-bar {
+	
+	border-right: 1px solid transparent;
+}
+
 // UI Settings
 
 // $thumbRadius: 3px;
